修改readme，增加参数注释